# Flask_tutorial

./: .gitignore  LICENSE.txt  MANIFEST.in  pyproject.toml  runme.bat  setup.cfg  setup.py  tox.ini
flaskr/: __init__.py  auth.py  blog.py  db.py  post.py  requirements.py  schema.sql  setlogger.py
flaskr/static/: style.css
flaskr/templates/: base.html
flaskr/templates/blog/: index.html  post.html  update.html
flaskr/templates/posts/: comments.html  flash.html  likes.html  view.html
flaskr/widgets/: commentswidget.py  flashes.py  likeswidget.py  postwidget.py  widget.py
tests/: conftest.py  test_auth.py  test_blog.py  test_db.py
