[metadata]
# Сюда входят файлы лицензий в wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

# tests path for pytest
[tool:pytest]
addopts = -vv
testpaths =
    tests

[coverage:run]
branch = True
source =
    flaskr